# miniLernen

./: .gitignore  README.md
mini_asyncio/: async_fetch_data.py  fetch_data.py  say_hello.py
mini_cublas/: ismax.c  readme.md
mini_cuda/: demo.cu  matrix_mullti  matrix_multi.cpp1.ii  matrix_multi.cpp4.ii  matrix_multi.cu  matrix_multi.cudafe1.c  matrix_multi.cudafe1.cpp  matrix_multi.cudafe1.gpu  matrix_multi.cudafe1.stub.c  matrix_multi.fatbin  matrix_multi.fatbin.c  matrix_multi.module_id  matrix_multi.ptx  matrix_multi.sm_52.cubin  mm  readme.md
mini_cuda/cuda-kernel-python/: Makefile  __init__.py  multiply.py  readme.md  setup.py  test.py
mini_cuda/cuda-kernel-python/pybind/: bind.cpp
mini_cuda/cuda-kernel-python/src/: multiply.cu
mini_flops/: gemm.py
mini_helloworld/: helloworld  helloworld.c  log.txt  readme.md  run.sh
mini_logging/: main.py  mylib.py
mini_nsight/: main.py
mini_nsight/nsight_compute/: .readme.md.swp  profile_mm.ncu-rep  readme.md
mini_nsys/: a.out  mmtranspose.cu  profile_matrix.ncu-rep
mini_onnx/: readme.md
mini_onnx/graphsurgeon_demo/: demo.py
mini_onnx/onnx_export/: atten_weights.pth  export_onnx.py  selfAttention.py  self_attention.onnx
mini_onnx/onnx_graphsurgeon/: addoutput.onnx  gs_addoutput.py
mini_opencl/: addArrays  addArrays.cc  readme.md
mini_perf/: gemm_cpu.c  readme.md
mini_stackoverflow/: a.out  overflow.c
mini_transformer/: crossAttention.py  readme.md  selfAttention.py
pybinds/: README.md  example.cpp
pybinds/simple_ops/: CMakeLists.txt  main.cpp  main.py
